Cambios realizados en el video de Youtube y correción de imágenes de página Quince

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
         <header>
 
-                <div class="topnav">
+                <!--<div class="topnav">
                     <input type="text" placeholder="Buscar..">
-                </div>
+                </div>-->
                 <div>
                     <a href="./index.html"><img src="./img/logo-black-low-res.png" width="15%"></a>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="fadein">
                         <div>
                             <figure>
-                                <img class="img-index" src="./img/15-años.jpg" alt="Fotografiamos tus 15 años en Santiago del Estero">
+                                <img class="img-index" src="./img/quince.jpg" alt="Fotografiamos tus 15 años en Santiago del Estero">
                             </figure>
                             <a href="" class="figure-image-boton" style="color:rgb(252, 252, 253)">Conocer más</a>
                         </div>    
@@ -84,8 +84,17 @@
             </section>
 
             <section id="youtube">
-            <h3>Nuestro Canal</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/efdswXXjnBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h3>Nuestro Canal</h3>
+                <div class="youtube-responsive">
+                    <iframe width="560" height="315" 
+                    src="https://www.youtube.com/embed/efdswXXjnBA" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                    </iframe>
+                </div>
+            <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/efdswXXjnBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
             </section>
 
         </main>
