--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <nav id="menu">
             <ul>
-                <li><a href="./index.html" class="nav-boton-menu">Inicio</a></li>
+                <li><a href="./index.html" class="nav-boton-menu"><span>Inicio</span></a></li>
                 <li><a href="./quince.html" class="nav-boton-menu">15 años</a></li>
                 <li><a href="./bodas.html" class="nav-boton-menu">Bodas</a></li>
                 <li><a href="./retrato.html" class="nav-boton-menu">Retrato</a></li>
