--- a/retrato.html
+++ b/retrato.html
@@ -21,11 +21,11 @@
 
         <nav id="menu">
             <ul>
-                <li><a href="./index.html" class="nav-boton-menu">Inicio</a></li>
-                <li><a href="./quince.html" class="nav-boton-menu">15 años</a></li>
-                <li><a href="./bodas.html" class="nav-boton-menu">Bodas</a></li>
-                <li><a href="./retrato.html" class="nav-boton-menu">Retrato</a></li>
-                <li><a href="./contacto.html" class="nav-boton-menu">Contacto</a></li>
+                <li><a href="./index.html" class="nav-boton-menu"><span>Inicio</span></a></li>
+                <li><a href="./quince.html" class="nav-boton-menu"><span>15 años</span> </a></li>
+                <li><a href="./bodas.html" class="nav-boton-menu"><span>Bodas</span></a></li>
+                <li><a href="./retrato.html" class="nav-boton-menu"><span>Retrato</span></a></li>
+                <li><a href="./contacto.html" class="nav-boton-menu"><span>Contacto</span></a></li>
             </ul>
         </nav>
 
