Correción en ancho y alto automatico  de imagenes de pagina Quince

--- a/bodas.html
+++ b/bodas.html
@@ -55,7 +55,7 @@
             </section>
         </main>
 
-        <footer class="pie">
+        <!-- <footer class="pie">
             
             <div id="footer-contenedor">
 
@@ -96,7 +96,7 @@
                 </div>
             </details>
 
-        </footer>
+        </footer> -->
       
 </body>
 </html>
