Imagenes de Retratos responsive

--- a/bodas.html
+++ b/bodas.html
@@ -39,12 +39,12 @@
                         <h1>Fotógrafo de Bodas en Santiago del Estero</h1>
                         <p>Hola! Mi nombre es Diego. Soy fotógrafo de bodas En Santiago del Estero. Contratar a un buen fotógrafo de bodas es una inversión muy importante. El día de tu boda es un acontecimiento único y cargado de emociones.</p>
                         <figure>
-                            <img class= img-default src="./img/boda-santiago-del-estero_01.jpg" alt="Fotógrafo de bodas en Santiago del Estero">
+                            <img class= "img-default" src="./img/boda-santiago-del-estero_01.jpg" alt="Fotógrafo de bodas en Santiago del Estero">
                             <figcaption>Nos encargamos de registrar los mejores momentos de tu boda</figcaption>
                           </figure>
                         <p>Me encantaría poder ser parte de ese día tan especial para Vos, para lograr capturar esos momentos tan especiales con esa pasión que me caracteriza al tomar mi cámara y mirar por el visor. Me fascina el hecho de registrar en un toma fotográfica un instante de la vida de las personas; es un segundo de Tu vida que no se vuelve a repetir. Yo estoy aquí para asegurarme de que el día de mañana, cuando veas las fotografías de tu boda, sientas las mismas emociones, sentimientos y alegría de ese momento de tu vida tan soñado.</p>
                         <figure>
-                            <img class= img-default src="./img/boda-santiago-del-estero_02.jpg" alt="Fotógrafo de bodas en Santiago del Estero">
+                            <img class= "img-default" src="./img/boda-santiago-del-estero_02.jpg" alt="Fotógrafo de bodas en Santiago del Estero">
                             <figcaption>Los detalles más importantes de tu boda pasarán a ser recuerdos inolvidables</figcaption>
                           </figure>
                         <p>Me gustaría poder conocerte en persona y charlar sobre tus expectativas. Es una oportunidad para conocernos en persona y poder compartir mi pasión por lo que hago. Cada boda es un desafío. Ese desafío, como fotógrafo, implica contar con imágenes la Historia del día de tu boda. ¿Estás preparada/o para embarcarte y ser protagonista de uno de los días más memorables de tu vida? Yo sí. Contactame ahora mismo llamando al (0385)155051742 o si quieres chatear, clic en el siguiente botón, que con gusto escucharé tus inquietudes:</p>
