Implementación de grid en el index

--- a/index.html
+++ b/index.html
@@ -76,10 +76,17 @@
             <section>
             <div>
                 <h3>Testimonios</h3>
-                <blockquote>
+                <blockquote class="primer-parrafo">
                     Realmente satisfecha y sorprendida con el trabajo de Diego!! Estoy fascinada con los retratos!.
-                    <span>Laura Etcheverría</span>
+                    <span class="nomb-1">Laura Etcheverría</span>
+                    <img class="primera-img" src="./img/cliente_01.png" alt="">
                   </blockquote>
+
+                  <!--<blockquote class="segundo-parrafo">
+                    Realmente satisfecha y sorprendida con el trabajo de Diego!! Estoy fascinada con los retratos!.
+                    <span class="nomb-2">Jorge Campitelli</span>
+                    <img class="segunda-img" src="./img/cliente_02.png" alt="">
+                  </blockquote>-->
             </div>
             </section>
 
