Se agrega una foto de uno de los testimonios

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                     <blockquote class="test-3">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus doloremque iure facilis in accusamus magni atque eaque temporibus sapiente minima, hic cumque reiciendis nostrum impedit sint minus sunt, asperiores tempore.
                     </blockquote>
-                    <span class="nomb-3">Laura Etcheverría</span>
-                    <img class="img-3" src="./img/cliente_01.png" alt="">
+                    <span class="nomb-3">Silvia Aranda</span>
+                    <img class="img-3" src="./img/cliente_03.png" alt="">
                                        
 
                 </div>
