Header responsive para todas las paginas

--- a/quince.html
+++ b/quince.html
@@ -12,11 +12,13 @@
 <body>
         <header>
 
-            <div class="topnav">
-                <input type="text" placeholder="Buscar..">
-            </div>
+        <!--<div class="topnav">
+            <input type="text" placeholder="Buscar..">
+        </div>-->
+        <div>
             <a href="./index.html"><img src="./img/logo-black-low-res.png" width="15%"></a>
-        
+        </div>
+
         </header>
 
         <nav id="menu">
@@ -114,7 +116,7 @@
                         <p>Planificar y llevar a cabo la documentación fotográfica de tu inolvidable cumpleaños es todo un proceso, que requiere gran planificación y dedicación. Te invito a chatear conmigo, para que podamos evacuar tus dudas, para que podamos conocer tus necesidades, y en función de eso, darte el servicio que cumpla con tus expectativas:</p>
 
                         <figure>
-                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img src="./img/whatsapp-button.png" alt="Contactame ahora mismo!" style="width:20%"></a>
+                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img class="whatsapp-responsive" src="./img/whatsapp-button.png" alt="Contactame ahora mismo!"></a>
                         </figure>
                     
                     </article>
