--- a/retrato.html
+++ b/retrato.html
@@ -12,11 +12,13 @@
 <body>
         <header>
 
-            <div class="topnav">
-                <input type="text" placeholder="Buscar..">
-            </div>
-            <a href="./index.html"><img src="./img/logo-black-low-res.png" width="15%"></a> 
-        
+        <!--<div class="topnav">
+            <input type="text" placeholder="Buscar..">
+        </div>-->
+        <div>
+            <a href="./index.html"><img src="./img/logo-black-low-res.png" width="15%"></a>
+        </div>
+
         </header>
 
         <nav id="menu">
