Adaptacion de pagina Retratos con framework Grid

--- a/bodas.html
+++ b/bodas.html
@@ -50,7 +50,7 @@
                           </figure>
                         <p>Me gustaría poder conocerte en persona y charlar sobre tus expectativas. Es una oportunidad para conocernos en persona y poder compartir mi pasión por lo que hago. Cada boda es un desafío. Ese desafío, como fotógrafo, implica contar con imágenes la Historia del día de tu boda. ¿Estás preparada/o para embarcarte y ser protagonista de uno de los días más memorables de tu vida? Yo sí. Contactame ahora mismo llamando al (0385)155051742 o si quieres chatear, clic en el siguiente botón, que con gusto escucharé tus inquietudes:</p>
                         <figure>
-                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img src="./img/whatsapp-button.png" alt="Contactame ahora mismo!" style="width:20%"></a>
+                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img src="./img/whatsapp-button.png" alt="Contactame ahora mismo!" style="width:250px"></a>
                         </figure>
                     </article>
             </section>
