Cambios en el botón de Whatsapp

--- a/quince.html
+++ b/quince.html
@@ -116,7 +116,7 @@
                         <p>Planificar y llevar a cabo la documentación fotográfica de tu inolvidable cumpleaños es todo un proceso, que requiere gran planificación y dedicación. Te invito a chatear conmigo, para que podamos evacuar tus dudas, para que podamos conocer tus necesidades, y en función de eso, darte el servicio que cumpla con tus expectativas:</p>
 
                         <figure>
-                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img class="whatsapp-responsive" src="./img/whatsapp-button.png" alt="Contactame ahora mismo!"></a>
+                            <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img class="whats-boton" src="./img/whatsapp-button.png" alt="Contactame ahora mismo!"></a>
                         </figure>
                     
                     </article>
