--- a/retrato.html
+++ b/retrato.html
@@ -95,7 +95,7 @@
             </section>
 
             <figure>
-                <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img src="./img/whatsapp-button.png" alt="Contactame ahora mismo!" style="width:250px"></a>
+                <a href="https://wa.me/5493855051742?text=Deseo%20más%20información%20sobre%20el%20servicio%20de%20fotografía%20." target="_blank"><img class="whats-boton" src="./img/whatsapp-button.png" alt="Contactame ahora mismo!"></a>
             </figure>
             
         </main>
