Cambios en los botones e imagenes del Index

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         <div class="fadein">
                             <div>
                                 <figure>
-                                    <img class="img-index" src="./img/boda.jpg" alt="Bodas en Santiago del Estero">
+                                    <a href="./bodas.html"><img class="img-index sombra-grow-img" src="./img/boda.jpg" alt="Bodas en Santiago del Estero"></a>
                                 </figure>
-                                <a href="" class="figure-image-boton" style="color:rgb(252, 252, 253)">Conocer más</a>
+                                <a href="./bodas.html" class="figure-image-boton sombra-grow" style="color:rgb(252, 252, 253)">Conocer más</a>
                             </div>    
                         </div>
                 </article>
@@ -51,9 +51,9 @@
                     <div class="fadein">
                         <div>
                             <figure>
-                                <img class="img-index" src="./img/quince.jpg" alt="Fotografiamos tus 15 años en Santiago del Estero">
+                                <a href="./quince.html"><img class="img-index sombra-grow-img" src="./img/quince.jpg" alt="Fotografiamos tus 15 años en Santiago del Estero"></a>
                             </figure>
-                            <a href="" class="figure-image-boton" style="color:rgb(252, 252, 253)">Conocer más</a>
+                            <a href="./quince.html" class="figure-image-boton sombra-grow" style="color:rgb(252, 252, 253)">Conocer más</a>
                         </div>    
                     </div>
                 </article>
@@ -63,9 +63,9 @@
                     <div class="fadein">
                         <div>
                             <figure>
-                                <img class="img-index" src="./img/retrato.jpg" alt="Tu personalidad y esencia con un Retrato personalizado">
+                                <a href="./retrato.html"><img class="img-index sombra-grow-img" src="./img/retrato.jpg" alt="Tu personalidad y esencia con un Retrato personalizado"></a>
                             </figure>
-                            <a href="" class="figure-image-boton" style="color:rgb(252, 252, 253)">Conocer más</a>
+                            <a href="./retrato.html" class="figure-image-boton sombra-grow" style="color:rgb(252, 252, 253)">Conocer más</a>
                         </div>    
                     </div>
                     
